skeplib/tests/fixtures/resolver/invalid/missing_imported_operator_export/main.sk
from a import xoxo;
fn main() -> Int { return 1 `xoxo` 2; }
